# TryInBrowser

./: Cargo.toml  Makefile.toml  README.md  index.html  netlify.toml  rust-toolchain.toml
pkg/: .gitignore  package.d.ts  package.js  package_bg.wasm  package_bg.wasm.d.ts
src/: lib.rs  runner.rs
src/lang/: brainfuck.rs  deadfish.rs  example_lang.rs  mod.rs  s10k.rs  slashes.rs
src/languages/: deadfish.rs  lang_trait.rs  mod.rs  s10k.rs
src/thread/: atw.rs  job.rs  mod.rs  thread.rs  utils.rs  worker.rs
src/threading/: atw.rs  job.rs  mod.rs  prelude.rs  thread.rs  utils.rs  worker.rs
tests/: lang_test.rs
