[package]
version = "0.2.0"
name = "try_in_browser"
repository = "https://github.com/Bubbler-4/TryInBrowser"
authors = ["Bubbler-4 <bubbler9903@gmail.com>"]
description = "Online interpreter that works even if you go offline"
categories = ["web", "interpreter"]
license = "MIT"
readme = "./README.md"
edition = "2018"
default-run = "runtib"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "runtib"
path = "src/bin/runtib.rs"

[dependencies]
seed = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.3.2"
wasm-bindgen = {version = "0.2.74", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.24"
js-sys = "0.3.51"
indoc = "1.0"
base64 = "0.13.0"
once_cell = "1.8"
#anymap2 = "0.13"
typemap = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Blob',
  'BlobPropertyBag',
  'console',
  'MessageEvent',
  'Response',
  'TextDecoder',
  'TextEncoder',
  'Url',
  'Window',
  'Worker',
  'WorkerGlobalScope',
]

[features]
ui_debug = []

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
